# cold_music_player

./: CMakeLists.txt  readme.md  rebuild.bat  run.bat
assets/: assets.qrc  images.qrc
assets/qml/: App.qml  LayoutBottomView.qml  LayoutHeaderView.qml  MusicIconButton.qml  MusicToolButton.qml  PageHomeView.qml
src/: App.cpp
